--- a/lambda/template.yaml
+++ b/lambda/template.yaml
@@ -77,6 +77,7 @@ Resources:
                 - connect:ListUserHierarchyGroups
                 - connect:ListUsers
                 - connect:DescribeUserHierarchyStructure
+                - connect:DescribeInstance
               Resource: !Sub "arn:aws:connect:${AWS::Region}:${AWS::AccountId}:instance/${connectInstanceId}"
             - Effect: Allow
               Action:
