Add lambda and lex box backup

--- a/lambda/template.yaml
+++ b/lambda/template.yaml
@@ -89,6 +89,7 @@ Resources:
                 - connect:ListHoursOfOperations
                 - connect:ListQueues
                 - connect:ListLambdaFunctions
+                - connect:ListLexBots
                 - connect:DescribeUserHierarchyStructure
                 - connect:DescribeInstance
                 - connect:DescribeQueue
